[metadata]
name = domb-napari
version = 2023.11.08

author = Borys Olifirov
author_email = omnia.fatum@gmail.com
license = MIT
description = Napari plugin implementing DoMB Tools for analyzing fluorescence-labeled proteins redistribution 
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Documentation = https://domb.bio/
    Source Code = https://github.com/wisstock/domb-napari
    Bug Tracker = https://github.com/wisstock/domb-napari/issues
    User Support = https://github.com/wisstock/domb-napari/issues

classifiers =
    Framework :: napari

    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    domb

[options.entry_points]
napari.manifest =
    domb-napari = domb_napari:napari.yaml