[metadata]
name = domb-napari
version = 0.3.1

author = Borys Olifirov
author_email = omnia.fatum@gmail.com
license = MIT
description = napari plugin for analyzing fluorescence-labeled proteins redistribution
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Documentation = https://domb.bio/
    Source Code = https://github.com/wisstock/domb-napari
    Bug Tracker = https://github.com/wisstock/domb-napari/issues
    User Support = https://github.com/wisstock/domb-napari/issues

classifiers =
    Framework :: napari

    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
install_requires =
    napari
    domb
    dipy

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    domb-napari = domb_napari:napari.yaml